# notebooks

./: .gitignore  BRANCH_PREVIEW_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_OPTIONS.md  LICENSE  MANIFEST.in  PR15_MISSING_FEATURES_COMPLETED.md  PREVIEW_DEPLOYMENT_GUIDE.md  README.md  REQUIREMENTS_ANALYSIS.md  TRANSFORMATION_EXAMPLES.md  TRANSFORMATION_MULTITYPE_PROPOSAL.md  WIDGET_DEVELOPMENT_GUIDE.md  WIDGET_FRAMEWORK_COMPLIANCE_REPORT.md  WIDGET_JSON_LD_MIGRATION.md  complete_demo.py  demo_branch_preview_system.py  demo_time_series.py  enhanced-arrow-input-schema.json  index.html  integration_summary.html  notebooks.jsonld  pyproject.toml  requirements.txt  setup.py  show_test.py  test-notebook.ipynb  test_branch_preview_deployment.py  test_browser_playground.py  test_complete_requirements.py  test_complete_system.py  test_continued_features.py  test_enhanced_features.py  test_javascript_execution.py  test_jupyter_import.py  test_jupyter_requirements.py  test_legacy_rejection.py  test_multitype_transformations.py  (+14 more)
.github/: copilot-instructions.md
_build/: deployment-manifest.json
docs/: DEPLOYMENT.md  DEVELOPMENT.md  README.md  _config.yml  architecture-examples.md  deployment-config.json  deployment-manifest.json  deployment-utils.js  github-integration-demo.html  index.html  index.html.backup  index.html.backup2  index.md  json-schema-specification.md  migration-guide.md  multi-action-widget-interface.md  svg-visualization-requirements.md  weierstrass-playground.md  widget-framework.md  widget-overview.md
js/: board-threading-bridge.js  github-pages-launcher.js
legacy/: weierstrass_lib.py  weierstrass_playground.ipynb  weierstrass_preamble.py
libraries/: README.md
notebooks/: 01-simple-sticky-notes.jsonld  02-minimal-pq-torus.jsonld  03-complete-pq-torus-workflow.jsonld  README.md  example-weierstrass-workflow.jsonld  pq-5-7-weierstrass-analysis.jsonld  pq-torus-p5-q7-example.jsonld  pq-torus-weierstrass-complete-p5-q7.jsonld  pq5-q7-complete-mathematical-analysis.jsonld  pq5-q7-complete-workflow.jsonld  prime-lattice-analysis.jsonld  sample-mathematical-analysis.ipynb  sample-notebook.jsonld  simple-sticky-notes-demo.jsonld  weierstrass-p5-q7-complete-notebook.jsonld  weierstrass-p5-q7-example.jsonld  (+1 more)
(+661 files in other folders)
